--- a/EmployableApp/Views/Shared/_HomeLayout.cshtml
+++ b/EmployableApp/Views/Shared/_HomeLayout.cshtml
@@ -15,8 +15,7 @@
     <div class="navbar sidenav" id="mySideNav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         @Html.ActionLink("Home", "Index", "Home")
-        @Html.ActionLink("About", "About", "Home")
-        @Html.ActionLink("Contact", "Contact", "Home")
+        
         @Html.ActionLink("City Match", "Details", "Addresses")
         @Html.Partial("_LoginPartial")
 
@@ -28,7 +27,19 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - dotemployable.com</p>
+            <div class="container">
+            <div class="row">
+                <div class="col-sm-11">
+                   <p style="margin-top: 15vh;">&copy; @DateTime.Now.Year - dotemployable.com</p>
+                </div>
+                <div class="col-sm-1" style="font-size: 2.5vh; margin-top: 2vh; padding: 0; text-align: right;">
+            @Html.ActionLink("About", "About", "Home")
+            <br />
+            <br />
+            @Html.ActionLink("Contact", "Contact", "Home")
+                </div>
+                </div>
+                </div>
         </footer>
     </div>
 
