added home back to the menu

--- a/EmployableApp/Views/Shared/_Layout.cshtml
+++ b/EmployableApp/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 </head>
 <body style="margin-left: 7vw;">
     <div class="navbar sidenav" id="mySideNav" style="width: 10vw;">
-
+        @Html.ActionLink("Home", "Index", "Home")
         @Html.ActionLink("City Match", "Details", "Addresses")
 
         @Html.Partial("_LoginPartial")
