--- a/EmployableApp/Views/Home/Index.cshtml
+++ b/EmployableApp/Views/Home/Index.cshtml
@@ -1,16 +1,20 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-<div class="row">
-<div class="navbar navbar-right"> @Html.Partial("_LoginPartialCornerDisplay")</div>
-    </div>
-<div class="row">
+
     <div class="jumbotron">
+        <div class="row">
+            <span style="font-size: 30px; cursor: pointer; color: white; float: left !important;" onclick="openNav()"> &#9776; Menu</span>
 
-        <h1>.employable</h1>
-        <h2>.you + .us = .hired</h2>
+            
+            <div class="navbar navbar-right"> @Html.Partial("_LoginPartialCornerDisplay")</div>
+        </div>
+    
 
-    </div>
+            <h1>.employable</h1>
+            <h2>.you + .us = .hired</h2>
+
+        </div>
 </div>
 
      <div class="row" style="height:45vh;">
